Fix horizontal overflow in some browsers

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -219,6 +219,7 @@ $headings-count: 5;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+        @include box-sizing(border-box);
         @include transition(all 0.5s);
     }
     h2, h3 {
